<resources>
    <string name="app_name">Ecoapp</string>
    <string name="guide">Гайд</string>
    <string name="practice">Практика</string>
    <string name="map">Карта</string>
    <string name="profile">Профиль</string>

    <string name="title_activity_maps">Map</string>
    <string name="geolocation_permission">Проекту BrainGape требуется разрешение на доступ к местоположению устройства. Пожалуйста, разрешите разрешение</string>
    <string name="permission_request">Запрос разрешения</string>
    <string name="grant_permission">Предоставить разрешение</string>
    <string name="title_activity_map">MapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="google_maps_api">AIzaSyCkLUeLf-u-bdnLZgcx3_-nYa-Z7hhu6vo</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
</resources>